# koshelieva_plpp_assignment5

./: CMakeLists.txt  README.md  functions.cpp  functions.h  interpreter.cpp  interpreter.h  main.cpp  test.py  variable.cpp  variable.h
